--- a/BSSN_GR/CMakeLists.txt
+++ b/BSSN_GR/CMakeLists.txt
@@ -147,50 +147,50 @@ endif()
 # )
 
 
-add_custom_command(
-    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
-    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged standard const . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
-    COMMENT "generating bssn code unstaged standard gauge with constant eta damping (during intial compilation this might take a while. )"
-    VERBATIM USES_TERMINAL
-)
+#add_custom_command(
+#    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
+#    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged standard const . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
+#    COMMENT "generating bssn code unstaged standard gauge with constant eta damping (during intial compilation this might take a while. )"
+#    VERBATIM USES_TERMINAL
+#)
 
-add_custom_command(
-    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
-    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged standard func . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
-    COMMENT "generating bssn code unstaged standard gauge with varying (large mass ratios) eta damping (during intial compilation this might take a while. )"
-    VERBATIM USES_TERMINAL
-)
-
-
-add_custom_command(
-    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
-    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged rochester const . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
-    COMMENT "generating bssn code unstaged rochester gauge with constant eta damping (during intial compilation this might take a while. )"
-    VERBATIM USES_TERMINAL
-)
-
-add_custom_command(
-    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
-    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
-    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged rochester func . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
-    COMMENT "generating bssn code unstaged rochester gauge with constant eta damping (during intial compilation this might take a while. )"
-    VERBATIM USES_TERMINAL
-)
+#add_custom_command(
+#    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
+#    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged standard func . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
+#    COMMENT "generating bssn code unstaged standard gauge with varying (large mass ratios) eta damping (during intial compilation this might take a while. )"
+#    VERBATIM USES_TERMINAL
+#)
 
 
-add_custom_target(BSSN_CODEGEN
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
-    )
+#add_custom_command(
+#    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
+#    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged rochester const . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
+#    COMMENT "generating bssn code unstaged rochester gauge with constant eta damping (during intial compilation this might take a while. )"
+#    VERBATIM USES_TERMINAL
+#)
+
+#add_custom_command(
+#    OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/dendro.py 
+#    DEPENDS ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py 
+#    COMMAND python3 ${CMAKE_SOURCE_DIR}/CodeGen/bssn.py unstaged rochester func . > ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
+#    COMMENT "generating bssn code unstaged rochester gauge with constant eta damping (during intial compilation this might take a while. )"
+#    VERBATIM USES_TERMINAL
+#)#
+
+
+#add_custom_target(BSSN_CODEGEN
+#    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_standard_gauge.cpp
+#    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_standard_gauge.cpp
+#    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_const_rochester_gauge.cpp
+#    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/bssneqs_eta_func_rochester_gauge.cpp
+#    )
 
 
 set(BSSN_INC include/parameters.h
@@ -625,7 +625,7 @@ if(BSSN_EXTRACT_GRAVITATIONAL_WAVES)
 endif(BSSN_EXTRACT_GRAVITATIONAL_WAVES)
 
 
-add_dependencies(bssnSolver BSSN_CODEGEN)
+#add_dependencies(bssnSolver BSSN_CODEGEN)
 #add_dependencies(rhsTestBed BSSN_CODEGEN)
 
 
